[package]
name = "pijersi-toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
bincode = "*"
clap = {version = "*", features = ["derive"]}
indicatif = "*"
miniz_oxide = "*"
pijersi-rs = {path = "../pijersi-rs"}
rayon = "*"
serde = {version = "*", features = ["derive"]}
serde_bytes = "*"